kanc_pamoi/src/tests/sample_code/should_fail/multi_file/bind/let_value_priv/src/mod.k
mod nat;
let _1 = nat.Nat.s(nat.Nat.o);
